slight change (name is renamed to make in vehiclemodel index view)

--- a/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleModels/Index.cshtml
+++ b/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleModels/Index.cshtml
@@ -14,7 +14,7 @@
 @using (Html.BeginForm("Index", "VehicleModels", FormMethod.Get))
 {
     <p>
-        Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        Find by make: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
         <input type="submit" value="Search" />
     </p>
 }
