1. Added viewmodels 2. Added automapper for mapping said viewmodels 3. Added extension methods for mapping and type conversion for Troy Gode's PagedList 4. Renaming SortingFilteringPaging methods in service to FindVehicleMake and FindVehicleModel respectivly 5. Added Sorting, Filtering and Paging classes and interfaces

--- a/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleMakes/Details.cshtml
+++ b/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleMakes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model VehicleCRUD.Service.VehicleMake
+﻿@model VehicleCRUD.MVC.ViewModels.VehicleMakeViewModel
 
 @{
     ViewBag.Title = "Details";
