--- a/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleModels/Details.cshtml
+++ b/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleModels/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model VehicleCRUD.Service.VehicleModel
+﻿@model VehicleCRUD.MVC.ViewModels.VehicleModelViewModel
 
 @{
     ViewBag.Title = "Details";
