--- a/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleModels/Index.cshtml
+++ b/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleModels/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<VehicleCRUD.Service.VehicleModel>
+﻿@model PagedList.IPagedList<VehicleCRUD.MVC.ViewModels.VehicleModelViewModel>
 @using PagedList.Mvc;
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
