--- a/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleModels/Create.cshtml
+++ b/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleModels/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@model VehicleCRUD.Service.VehicleModel
-
+﻿@model VehicleCRUD.MVC.ViewModels.VehicleModelViewModel
 @{
     ViewBag.Title = "Create";
 }
@@ -7,10 +6,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>VehicleModel</h4>
         <hr />
