--- a/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleModels/Delete.cshtml
+++ b/VehicleCRUD/VehicleCRUD.MVC/Views/VehicleModels/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model VehicleCRUD.Service.VehicleModel
+﻿@model VehicleCRUD.MVC.ViewModels.VehicleModelViewModel
 
 @{
     ViewBag.Title = "Delete";
@@ -37,7 +37,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
